# idna

./: .gitignore  .pre-commit-config.yaml  .travis.yml  HISTORY.rst  LICENSE.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  SECURITY.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yml  experiment-1.yml  python-package.yml  scorecard.yml
idna/: __init__.py  codec.py  codec.pyi  compat.py  compat.pyi  core.py  core.pyi  idnadata.py  idnadata.pyi  intranges.py  intranges.pyi  intset.py  package_data.py  uts46data.py  uts46data.pyi
tests/: test_idna.py  test_idna_codec.py  test_idna_compat.py  test_idna_other.py  test_idna_tr46.py  test_idna_uts46.py  test_intranges.py  test_intset.py
tools/: build-idnadata.py  build-uts46data.py  idna-data
