[metadata]
name = idna
version = attr: idna.__version__
author = Kim Davies
author_email = kim+pypi@gumleaf.org
description = Internationalized Domain Names in Applications (IDNA)
license = BSD-3-Clause
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Internet :: Name Service (DNS)
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Utilities

[options]
python_requires = >=3.5
packages=find:

[options.packages.find]
exclude =
  tests*
